--- a/anniversary-surprise/style.css
+++ b/anniversary-surprise/style.css
@@ -18,7 +18,7 @@
   --white-color: #fff;
   --cover-color: linear-gradient(45deg, #FED8B1, #6F4E37);
   --pages-color: linear-gradient(90deg, #FED8B1, #ddd);
-  --border: .125rem solid #130d08;
+  --border: .125rem solid #6F4E37;
   --box-shadow: 0 0 .6rem rgba(0, 0, 0, .2);
 }
 
@@ -64,6 +64,7 @@ body {
   width:100%;
   height:100%;
   display:flex;
+  perspective: 250rem;
 }
 
 .album .album-page{
@@ -108,6 +109,7 @@ margin-bottom: .8rem;
   right: 0;
   transform-style: preserve-3d;
   transform-origin: left;
+  transition: transform 1s cubic-bezier(.645, .045, .355, 1);
 }
 
 .album-page.page-right.turn{
@@ -167,4 +169,44 @@ margin-bottom: .8rem;
 .nextprev-btn.back {
   left: 1.5rem;
 
+}
+
+.back-profile {
+  position: absolute;
+  bottom:1.2rem;
+  right:2rem;
+  width: 2rem;
+  height: 2rem;
+  background: transparent;
+  border: var(--border);
+  border-radius: .3rem;
+  font-size: 1.1rem;
+  color: var(--second-text-color);
+  display:inline-flex;
+  justify-content: center;
+  align-items: center;
+  transition: .5s;
+  border-color: var(--second-text-color);
+}
+
+.back-profile:hover {
+  background: var(--second-text-color);
+}
+
+
+.back-profile p {
+  position: absolute;
+  top:0;
+  left:50%;
+  transform: translateX(-50%) scale(.5);
+  font-size: 1rem;
+  opacity:0;
+  transition: 0.5s;
+  color: var(--second-text-color);
+}
+
+.back-profile:hover p {
+  opacity: 1;
+  transform: translateX(-50%) scale(1);
+  top: -1.8rem;
 }
