--- a/anniversary-surprise/style.css
+++ b/anniversary-surprise/style.css
@@ -29,6 +29,7 @@ body {
   min-height: 100vh;
   background: var(--bg-color);
   color: var(--text-color);
+  overflow:hidden;
 }
 
 .wrapper{
@@ -36,6 +37,19 @@ body {
   width: 66rem;
   height: 45rem;
   padding: 2rem;
+  perspective: 250rem;
+  animation: show-animate 2s forwards;
+}
+
+@keyframes show-animate {
+  0%, 30%{
+    opacity: 0;
+    transform: rotate(-20deg);
+  }
+  100%{
+    opacity: 1;
+    transform: rotate(0deg);
+  }
 }
 
 .cover {
@@ -55,6 +69,10 @@ body {
   z-index: -1;
 }
 
+.cover.cover-right {
+  z-index: 100;
+  transition: transform 1s cubic-bezier(.645, .045, .355, 1);
+}
 .cover.cover-right.turn {
   transform: rotateY(180deg);
 }
@@ -77,6 +95,9 @@ body {
   padding: 2rem;
 }
 
+.album-page.page-left {
+  box-shadow: -.6rem, .6rem, .6rem rgba(0, 0, 0, .1);
+}
 .greetings-page{
   display:flex;
   flex-direction: column;
@@ -191,6 +212,7 @@ margin-bottom: .8rem;
 
 .back-profile:hover {
   background: var(--second-text-color);
+  color: white;
 }
 
 
