--- a/anniversary-surprise/style.css
+++ b/anniversary-surprise/style.css
@@ -277,58 +277,10 @@ margin-bottom: .8rem;
 }
 
 @media (max-width: 425px) {
-  /* .wrapper {
-    width: 50rem;
-    height: 35rem;
-    padding: 1.5rem;
-  }
-
-  .album {
-    flex-direction: column;
-  }
-
-  .cover, .album .album-page {
-    width: 100%;
-    height: auto;
-  }
-
-  .album .album-page {
-    padding: 1rem;
-  }
-
-  .greetings-page img {
-    max-width: 150px;
-  }
-
-  .greetings-page h1 {
-    font-size: 1rem;
-  }
-
-  .greetings-page p {
-    font-size: 12px;
-  }
-
-  .nextprev-btn, .back-profile {
-    bottom: 1rem;
-    right: 1rem;
-    width: 1.5rem;
-    height: 1.5rem;
-    font-size: 1.5rem;
-  }
-
-  .nextprev-btn.back {
-    left: 1rem;
-  }
-
-  .back-profile {
-    bottom: 1.5rem;
-    right: 1.5rem;
-  }
-} */
 
 .wrapper {
   width: 40rem;
-  height: 30rem;
+  height: 27rem;
   padding: 1rem;
 }
 
@@ -337,11 +289,11 @@ margin-bottom: .8rem;
 }
 
 .greetings-page h1 {
-  font-size: 1.2rem;
+  font-size: .7rem;
 }
 
 .greetings-page p {
-  font-size: 10px;
+  font-size: 7px;
 }
 
 .greetings-page img{
@@ -352,6 +304,15 @@ margin-bottom: .8rem;
 
 .album-page .page-back,
 .album-page .page-front{
-  font-size: 9px;
+  font-size: 7px;
 }
+
+.back-profile {
+  width: 1.5rem;
+  height: 1.5rem;
+  font-size: 1.1rem;
+  right:1.5rem;
+}
+
+
 }
